# glaive

./: .gitignore  AGENTS.md  gradle.properties
.github/workflows/: android-ci.yml
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: glaive_core.c
app/src/main/java/com/mewmix/glaive/: MainActivity.kt
app/src/main/java/com/mewmix/glaive/bridge/: BridgeActivity.kt  BridgeConstants.kt  ToolProvider.kt
app/src/main/java/com/mewmix/glaive/core/: DebugLogger.kt  FavoritesManager.kt  FileOperations.kt  GlaiveCursor.kt  NativeCore.kt  RecentFilesManager.kt
app/src/main/java/com/mewmix/glaive/data/: GlaiveItem.kt
app/src/main/java/com/mewmix/glaive/ui/: ColorPicker.kt  DiskUsageMap.kt  GlaiveScreen.kt  GoogleFontsProvider.kt  ThemeManager.kt  ThemeSettings.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/xml/: file_paths.xml
